// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceNotifications Component renders correctly 1`] = `
.emotion-0 {
  color: #00813B;
  background: rgba(154, 217, 173, 0.20);
  font-size: 12px;
  line-height: 16px;
  padding: 4px 6px;
  border-radius: 2px;
}

<div
  class="flexbox centered "
>
  <div
    class="flexbox center-aligned margin-right-small emotion-0"
    data-mui-internal-clone-element="true"
  >
    Free trial
     
  </div>
</div>
`;

exports[`DeviceNotifications Component renders correctly with an expiration date 1`] = `
.emotion-0 {
  color: #00813B;
  background: rgba(154, 217, 173, 0.20);
  font-size: 12px;
  line-height: 16px;
  padding: 4px 6px;
  border-radius: 2px;
}

<div
  class="flexbox centered "
>
  <div
    class="flexbox center-aligned margin-right-small emotion-0"
    data-mui-internal-clone-element="true"
  >
    Free trial
     
    <span>
      : 
      59
       
      days
       left
    </span>
  </div>
</div>
`;
